--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ body {
   height: 150px;
   background-color: #333;
   position: relative;
-  z-index: 2;
+  z-index: 1;
 }
 #portal:hover {
  transform: scale(1.2);
@@ -37,7 +37,7 @@ h1 {
   color: #fff;
   text-shadow: 0px 20px 2px black;
   position: relative;
-  z-index: 2;
+  z-index: -1;
 }
 .wrapper {
     display: flex;
@@ -51,4 +51,10 @@ h1 {
     border: 1px solid white;
     border-radius: 20px;
     box-shadow: 0 0 1000px rgba(0, 0, 0, 1); /* Add a shadow to the wrapper */
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    padding: 20px; /* Adjust the padding to make it smaller on mobile */
+  }
 }
