--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Handjet&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Spectral:wght@300&display=swap');
 
 body {
@@ -17,19 +16,31 @@ body {
   margin: 0;
   background-color: #333;
 }
+
 #about {
-  color: #fff; /* Set the text color for the 'about' section */
-  font-size: 30px;
+  color: #ffffff; 
   margin: 0 auto;
   position: absolute;
-  background-image: url(cover.png);
-  top: 120%; /* Vertically center the element */
-  left: 20%; /* Horizontally center the element */
-  transform: translate(-50%, -50%); /* Adjust the position to center the element properly */
-  background-image: url(cover.png);
+  top: 100%;
+  left: 0%;
+  right: 0%;
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  z-index: 1;
+  background-image: url("dbg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-.wrapper {
-  background-image: url(cover.png);
+
+#about img {
+  display: block;
+  max-width: 90%;
+  max-height: 100%;
+  top: 50%;
+  bottom: 50%;
+  margin: 0 auto;
 }
 
 
@@ -148,6 +159,27 @@ nav ul li a:hover {
     display: none;
   }
 
+  #about {
+    color: #ffffff; 
+    margin: 0 auto;
+    position: absolute;
+    top: 100%;
+    left: 0%;
+    right: 0%;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    z-index: 1;
+    background-image: url("about-me-mobile.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  #about img{
+    display: none;
+  }
+
   .container {
     max-width: 1200px;
     margin:  auto;
@@ -176,6 +208,7 @@ nav ul li a:hover {
     font-size: 36px;
     margin-bottom: 20px;
     padding-right: 0;
+    margin-right: 0;
   }
 
   nav ul {
@@ -193,6 +226,8 @@ nav ul li a:hover {
   .hamburger {
     display: block; /* Show the hamburger icon */
     margin-bottom: 15px;
+    left: 50%;
+    
   }
 
   .show-nav {
@@ -233,12 +268,6 @@ nav ul li a:hover {
   }
 }
 
-.hamburger-wrapper {
-  /* Hide the hamburger icon on mobile screens */
-  display: none;
-}
-
-/* Show the hamburger icon only on normal screens (wider than 768px) */
 @media (min-width: 769px) {
   .hamburger-wrapper {
     display: flex;
@@ -252,6 +281,7 @@ nav ul li a:hover {
 }
 
 }
+
 @media (min-width: 769px) {
   #toggle-nav {
     display: block;
