--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,19 @@ body {
   bottom: 50%;
   margin: 0 auto;
 }
-
+#projects {
+  color: #ffffff; 
+  margin: 0 auto;
+  position: absolute;
+  top: 200%;
+  left: 0%;
+  right: 0%;
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  z-index: 1;
+  background-color: black;
+}
 
 body.loaded {
   animation: fadeIn 1s forwards, blurBackground 3s forwards;
@@ -73,8 +85,10 @@ body.loaded {
 header {
   background-color: #33333300;
   color: #fff;
-  padding: 100px 0;
   text-align: center;
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
 }
 
 
