--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Spectral:wght@300&display=swap');
 
+
 body {
   font-family: "Spectral";
   margin: 0;
@@ -14,7 +15,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #333;
+  background-color: black;
 }
 
 #about {
@@ -83,6 +84,80 @@ body.loaded {
     filter: blur(0);
     backdrop-filter: blur(0);
   }
+}
+.form-container {
+  margin-top: 20%;
+  margin-bottom: 20%;
+  height: 100%;
+  background-image: url(dbg.png);
+  display: flex;
+  justify-content: center;
+
+}
+
+#contact {
+  width: 80%;
+  max-width: 600px;
+  max-height: 600px;
+  margin: 40px auto;
+  margin-top: 10%;
+  align-items: center;
+  background-image: url(cover.png);
+  padding: 20px;
+  border: 1px solid white;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center horizontally */
+  justify-content: center; /* Center vertically */
+  background-color: black;
+}
+
+p {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 30px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+textarea {
+  resize: none;
+  height: 200px;
+  overflow: auto;
+}
+
+button {
+  background-color: white;
+  color: black;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: black;
+  color: white;
 }
 
 
@@ -183,6 +258,7 @@ nav ul li a:hover {
   #mobile-bg {
     display: flex;
   }
+
 
   #about {
     color: #ffffff; 
